# CEPCSW

./: build-k4.sh  build.sh  run-k4.sh  setup.sh
Detector/: CMakeLists.txt
Detector/Demon/: CMakeLists.txt
Detector/FullSilicon/: CMakeLists.txt
Detector/FullSilicon/compact/: cepc_FST2.xml
Detector/FullSilicon/compact/cepc/: cepc_Beampipe.xml  cepc_EIT_EOT.xml  cepc_IDs.xml  cepc_VXD_SOT.xml  cepc_readouts.xml
Detector/FullSilicon/src/CepcDetector/: CEPC_TPC_barrel.cpp
Examples/options/: DD4hepActs.py  DD4hepActsPropagation.py  Fullsilicon.py  GenericActs.py
Reconstruction/: CMakeLists.txt
Reconstruction/Acts/: CMakeLists.txt
Reconstruction/Acts/ActsCepcJsonPlugin/: CMakeLists.txt  CMakeLists.txt~
Reconstruction/Acts/ActsCepcJsonPlugin/include/: JsonSurfacesWriter.hpp
Reconstruction/Acts/DD4hepPropagationExample/: CMakeLists.txt
Reconstruction/Acts/DD4hepPropagationExample/src/: DD4hepPropagationExample.cpp  DD4hepPropagationExample.hpp
Reconstruction/Acts/Detectors/: CMakeLists.txt
Reconstruction/Acts/Detectors/DD4hepExample/: CMakeLists.txt
Reconstruction/Acts/Detectors/DD4hepExample/compact/: Demonstrator.xml
Reconstruction/Acts/Detectors/DD4hepExample/src/: DD4hepExample.cpp  DD4hepExample.hpp  JsonSurfacesWriter.cpp
Reconstruction/Acts/Detectors/GenericExample/: CMakeLists.txt
Reconstruction/Acts/Detectors/GenericExample/src/: BuildGenericDetector.cpp  BuildGenericDetector.hpp  GenericDetectorElement.cpp  GenericDetectorElement.hpp  GenericExample.cpp  GenericExample.hpp  LayerBuilderT.hpp  ProtoLayerCreatorT.hpp
cmake/: CEPCSWDependencies.cmake  CEPCSWEnv.cmake
